udev 181
========
Require kmod version 5.

Provide /dev/cdrom symlink for /dev/sr0.

udev 180
========
Fix for ID_PART_ENTRY_* property names, added by the blkid built-in. The
fix is needed for udisk2 to operate properly.

Fix for skipped rule execution when the kernel has removed the device
node in /dev again, before the event was even started. The fix is needed
to run device-mapper/LVM events properly.

Fix for the man page installation, which was skipped when xsltproc was not
installed.

udev 179
========
Bugfix for $name resolution, which broke at least some keymap handling.

udev 178
========
Bugfix for the firmware loading behavior with kernel modules which
try to load firmware in the module_init() path. The blocked event
runs into a timout now, which should allow the firmware to be loaded.

Bugfix for a wrong DEVNAME= export, which breaks at least the udev-acl
tool.

Bugfix for missing ID_ properties for GPT partitions.

The RUN+="socket:.." option is deprecated and should not be used. A warning
during rules parsing is printed now. Services which listen to udev events,
need to subscribe to the netlink messages with libudev and not let udev block
in the rules execution until the message is delivered.

udev 177
========
Bugfix for rule_generator instalation.

udev 176
========
The 'devtmpfs' filesystem is required now, udev will not create or delete
device nodes anymore, it only adjusts permissions and ownership of device
nodes and maintains additional symlinks.

A writable /run directory (ususally tmpfs) is required now for a fully
functional udev, there is no longer a fallback to /dev/.udev.

The default 'configure' install locations have changed. Packages for systems
with the historic / vs. /usr split need to be adapted, otherwise udev will
be installed in /usr and not work properly. Example configuration options
to install things the traditional way are in INSTALL.

The default install location of the 'udevadm' tool moved from 'sbin'